FlamingoSettings: import livedisplay preferences
All credits to LineageOS and related authors on:

https://github.com/LineageOS/android_packages_apps_LineageParts

Syberia: Forward port to 10 and migrate to androidx

Squashed commits:

commit f4795d67d018d99b1cf724360bee278d66bbebeb
Author: Paul Keith <javelinanddart@gmail.com>
Date:   Tue Jan 14 02:39:24 2020 +0000

    Settings: Allow removing livedisplay pref screen with config_enableLiveDisplay

    Change-Id: I17103ad116d1d26855fb47fdee1fa6cdc914e053

commit 98638aef74e0a6c1dab2a45a4582eb8daef0b2e9
Author: Han Wang <416810799@qq.com>
Date:   Fri May 1 15:41:46 2020 +0200

    Settings: Remove obselete PreferenceCategory for LiveDisplay

     * This avoids showing empty 'title' which looks ugly.

    Change-Id: I34c655c94a26fc5907620fc9b82b84852fe741be

commit 36d8f89c63a38f182d69160264121c458a768b10
Author: Bruno Martins <bgcngm@gmail.com>
Date:   Sat Apr 11 14:34:40 2020 +0100

    LiveDisplaySettings: Hide Reading Mode if wellbeing app is enabled

    Google's wellbeing app provides Wind Down feature along with
    a grayscale option. Remove our preference to avoid having
    duplicate features.

    Change-Id: Ib20a0544a778ace385cb45ab2518a44420fb9bf6

commit 6750d003c074d46df1200b29ba674e5748b29ee7
Author: dianlujitao <dianlujitao@lineageos.org>
Date:   Wed Aug 7 00:20:42 2019 +0800

    LiveDisplaySettings: Hide automatic outdoor mode preference on HWC2

     * Unconditionally enabled on HWC2.

    Change-Id: Iebc39ba7d9be2ad83425b70fdc0542b8e4be6104

commit fb79eac7755c11f7b42ce6c432b505b2f4071869
Author: dianlujitao <dianlujitao@lineageos.org>
Date:   Tue Aug 6 23:33:11 2019 +0800

    LiveDisplaySettings: Reenable display mode preference for outdoor mode

    This reverts commit 7998c557e7f6a8749052f5bd7d7251dbc21d10ce.

    Change-Id: Iebcc6bcb8d29e8b61218a93d1856dd710e263f47

commit 4491cdf82a0fafe1c0558d35044de8fd58ebd43f
Author: Henrique Silva <jhenrique09.mcz@hotmail.com>
Date:   Sun Jun 2 18:32:11

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,8 @@
         coreApp="true"
         android:sharedUserId="android.uid.system">
 
+    <uses-permission android:name="lineageos.permission.MANAGE_LIVEDISPLAY" />
+
     <application>
         <uses-library android:name="org.apache.http.legacy"/>
         <uses-library android:name="androidx.window.extensions" android:required="false"/>
@@ -27,6 +29,24 @@
                 android:value="@string/menu_key_flamingo" />
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.flamingo.settings.FlamingoSettingsFragment" />
+        </activity>
+
+        <activity
+            android:name="com.flamingo.settings.display.livedisplay.LiveDisplaySettingsActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.settings.LIVEDISPLAY_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.order" android:value="-100" />
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.display" />
+            <meta-data android:name="com.android.settings.title"
+                android:resource="@*android:string/live_display_title" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/live_display_summary" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.flamingo.settings.display.livedisplay.LiveDisplaySettings" />
         </activity>
 
         <receiver android:name="com.google.android.settings.routines.RoutinesActionBroadcastReceiver"
