--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,5 +61,17 @@
                 <action android:name="com.google.android.settings.routines.RoutinesActionBroadcastReceiver.RINGER_MODE_SILENCE_ACTION"/>
             </intent-filter>
         </receiver>
+
+        <receiver android:name="com.google.android.settings.fuelgauge.BatteryBroadcastReceiver"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="settings.intelligence.battery.action.FETCH_BATTERY_USAGE_DATA"/>
+            </intent-filter>
+        </receiver>
+
+        <service android:name="com.google.android.settings.fuelgauge.BatteryUsageLoaderService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="false"
+            android:process=":usage_data_loader" />
     </application>
 </manifest>
