--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -63,6 +63,23 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.flamingo.settings.gestures.SwipeToScreenshotSettingsActivity"
+                android:exported="false">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS"/>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.order" android:value="1000" />
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.gestures" />
+            <meta-data android:name="com.android.settings.title"
+                android:resource="@string/three_finger_gesture_title" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/three_finger_gesture_summary" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.flamingo.settings.gestures.SwipeToScreenshotSettings" />
+        </activity>
+
         <receiver android:name="com.google.android.settings.routines.RoutinesActionBroadcastReceiver"
                   android:permission="com.google.android.settings.routines.ROUTINES_ACTIONS"
                   android:exported="true">
