--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,26 @@
         <uses-library android:name="androidx.window.extensions" android:required="false"/>
         <uses-library android:name="androidx.window.sidecar" android:required="false"/>
 
+         <activity android:name="com.flamingo.settings.FlamingoSettingsActivity"
+                android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.settings.FLAMINGO_SETTINGS" />
+                <action android:name="com.android.settings.action.IA_SETTINGS"/>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.order" android:value="-1000" />
+            <meta-data android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.homepage" />
+            <meta-data android:name="com.android.settings.title"
+                android:resource="@string/flamingo_settings_title" />
+            <meta-data android:name="com.android.settings.summary"
+                android:resource="@string/flamingo_settings_summary" />
+            <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
+                android:value="@string/menu_key_flamingo" />
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.flamingo.settings.FlamingoSettingsFragment" />
+        </activity>
+
         <receiver android:name="com.google.android.settings.routines.RoutinesActionBroadcastReceiver"
                   android:permission="com.google.android.settings.routines.ROUTINES_ACTIONS"
                   android:exported="true">
