--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
         android:sharedUserId="android.uid.system">
 
     <uses-permission android:name="android.permission.MANAGE_APP_LOCK" />
+    <uses-permission android:name="android.permission.UPDATE_FONTS" />
     <uses-permission android:name="lineageos.permission.MANAGE_LIVEDISPLAY" />
 
     <application>
