--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,21 +14,11 @@
         <uses-library android:name="androidx.window.sidecar" android:required="false"/>
 
          <activity android:name="com.flamingo.settings.FlamingoSettingsActivity"
-                android:exported="true">
+                android:exported="false">
             <intent-filter>
                 <action android:name="com.android.settings.FLAMINGO_SETTINGS" />
-                <action android:name="com.android.settings.action.IA_SETTINGS"/>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            <meta-data android:name="com.android.settings.order" android:value="-1000" />
-            <meta-data android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.homepage" />
-            <meta-data android:name="com.android.settings.title"
-                android:resource="@string/flamingo_settings_title" />
-            <meta-data android:name="com.android.settings.summary"
-                android:resource="@string/flamingo_settings_summary" />
-            <meta-data android:name="com.android.settings.icon"
-                android:resource="@drawable/ic_flamingo" />
             <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
                 android:value="@string/menu_key_flamingo" />
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
@@ -37,18 +27,13 @@
 
         <activity
             android:name="com.flamingo.settings.display.livedisplay.LiveDisplaySettingsActivity"
-            android:exported="true">
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.android.settings.LIVEDISPLAY_SETTINGS" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            <meta-data android:name="com.android.settings.order" android:value="-100" />
-            <meta-data android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.display" />
-            <meta-data android:name="com.android.settings.title"
-                android:resource="@*android:string/live_display_title" />
-            <meta-data android:name="com.android.settings.summary"
-                android:resource="@string/live_display_summary" />
+            <meta-data android:name="com.android.settings.HIGHLIGHT_MENU_KEY"
+                android:value="@string/menu_key_display" />
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.flamingo.settings.display.livedisplay.LiveDisplaySettings" />
         </activity>
@@ -63,23 +48,6 @@
                 <action android:name="android.app.action.UNLOCK_APP" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </activity>
-
-        <activity android:name="com.flamingo.settings.gestures.SwipeToScreenshotSettingsActivity"
-                android:exported="false">
-            <intent-filter>
-                <action android:name="com.android.settings.action.IA_SETTINGS"/>
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-            <meta-data android:name="com.android.settings.order" android:value="1000" />
-            <meta-data android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.gestures" />
-            <meta-data android:name="com.android.settings.title"
-                android:resource="@string/three_finger_gesture_title" />
-            <meta-data android:name="com.android.settings.summary"
-                android:resource="@string/three_finger_gesture_summary" />
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.flamingo.settings.gestures.SwipeToScreenshotSettings" />
         </activity>
 
         <receiver android:name="com.google.android.settings.routines.RoutinesActionBroadcastReceiver"
