--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,7 +50,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name="com.google.android.settings.routines.RoutinesActionBroadcastReceiver"
+        <!--<receiver android:name="com.google.android.settings.routines.RoutinesActionBroadcastReceiver"
                   android:permission="com.google.android.settings.routines.ROUTINES_ACTIONS"
                   android:exported="true">
             <intent-filter>
@@ -68,6 +68,6 @@
         <service android:name="com.google.android.settings.fuelgauge.BatteryUsageLoaderService"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="false"
-            android:process=":usage_data_loader" />
+            android:process=":usage_data_loader" />-->
     </application>
 </manifest>
