FlamingoSettings: use a new task stack for app lock fragments
* fixes fragments staying in recents on going home
* also made other preferences do binder calls asynchronously

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,6 +50,12 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.flamingo.settings.security.applock.AppLockSubSettings"
+            android:exported="false"
+            android:excludeFromRecents="true"
+            android:taskAffinity="com.android.settings.applock"
+            android:launchMode="singleTask" />
+
         <!--<receiver android:name="com.google.android.settings.routines.RoutinesActionBroadcastReceiver"
                   android:permission="com.google.android.settings.routines.ROUTINES_ACTIONS"
                   android:exported="true">
